--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "thmsck/cookie",
+  "name": "thmsck/kirby-cookie",
   "description": "kirby plugin for cookie approval",
   "authors": [
     {
